# TSS.MSR

./: .gitignore  CMakeLists.txt
TSS.CPP/: CMakeLists.txt
TSS.CPP/Samples/: CMakeLists.txt  TpmCppTest.cpp  TpmCppWrapper.cpp  TpmCppWrapper.h
TSS.CPP/Src/: AuthSessions.cpp  CMakeLists.txt  CryptoServices.cpp  CryptoServices.h  Helpers.cpp  Helpers.h  Makefile  Makefile.dep  Marshall.h  MarshallIn.cpp  MarshallInternal.h  MarshallOut.cpp  Policy.cpp  Policy.h  TextSerializer.cpp  Tpm2.cpp  Tpm2.h  Tpm2_hdr_autogen.h  TpmCpp.cpp  TpmCustomDefs.cpp  TpmCustomDefs.h  TpmDevice.cpp  TpmDevice.h  TpmStructureBase.cpp  TpmStructureBase.h  TpmTypes.cpp  TpmTypes.h  TpmTypes_skel.cpp  TpmTypes_skel.h  dllmain.cpp  fdefs.h  stdafx.cpp  stdafx.h  targetver.h
